--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,9 @@ const canonicalUrl = siteUrl ? new URL(currentPath, siteUrl).toString() : undefi
     {canonicalUrl && <meta name="og:url" content={canonicalUrl} />}
     <meta name="og:site_name" content="Is it worth the time?" />
     <meta name="og:image" content={siteUrl + 'og-image.png'} />
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta name="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image">
