Fix table header light mode highlights

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -296,8 +296,8 @@ const timeSavings = [
   }
 
   .freq-header.highlight {
-    background: rgb(var(--accent-blue));
-    color: white;
+    background: rgb(220, 235, 250);
+    //color: white;
   }
 
   @media (prefers-color-scheme: dark) {
@@ -317,8 +317,7 @@ const timeSavings = [
   }
 
   .time-header.highlight {
-    background: rgb(var(--accent-grey));
-    color: white;
+    background: rgb(230, 230, 230);
   }
 
   @media (prefers-color-scheme: dark) {
