--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,6 +42,8 @@ const canonicalUrl = siteUrl ? new URL(currentPath, siteUrl).toString() : undefi
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 
     <link rel="preload" href="/fonts/subset-IBMPlexSerif-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="/fonts/subset-IBMPlexSans-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
