Vertically center align the page on large screens

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,8 +27,8 @@ const timeSavings = [
 ---
 
 <Layout title="Is It Worth The Time?" description="Calculate how much to spend on time-saving tools based on your salary and the time you'll save.">
-  <main class="min-h-screen">
-    <div class="site-section">
+  <main class="min-h-screen flex flex-col justify-center">
+    <div class="site-section grow-0">
       <header class="text-center mb-12">
         <h1 class="text-4xl lg:text-5xl font-semibold text-slate-800 dark:text-slate-100 mb-1 sm:mb-2" data-i18n="title">
           Is it worth the time?
